--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -1,3 +1,19 @@
+.video-container {
+    display: flex;
+    justify-content: center; align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #000000;
+    overflow: hidden;
+}
+
 video {
-    width: '100%';
+    width: 100%;
+}
+
+@media (min-width: 480px) {
+    video {
+        width: auto;
+        height: 100vh;
+    }
 }
