fixing css details for mobile

--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -19,6 +19,7 @@ video {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     position: absolute;
     bottom: 0; left: 50%;
     transform: translateX(-50%);
