--- a/src/components/ProjectsButton/css/styles.css
+++ b/src/components/ProjectsButton/css/styles.css
@@ -2,6 +2,10 @@
   display: block;
   margin-top: 25px;
 }
+.container-projects__button {
+    color: #fff;
+    text-decoration: none;
+}
 .container-projects__button span {
     font-size: 20px;
 }
