--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -4,7 +4,7 @@
 
 .video-container {
     display: flex;
-    justify-content: center; align-items: center;
+    justify-content: flex-start; align-items: center;
     width: 100%;
     height: 100vh;
     background-color: #000000;
@@ -12,7 +12,9 @@
 }
 
 video {
-    width: 100%;
+    transform: translateX(-25%);
+    /* width: 100%; */
+    height: 100vh;
 }
 
 .container-title {
@@ -30,9 +32,11 @@ video {
     padding-bottom: 35px;
 } 
 
-@media (min-width: 480px) {
+@media (min-width: 620px) {
+    .video-container {
+        justify-content: center; align-items: center;
+    }
     video {
-        width: auto;
-        height: 100vh;
+        transform: translateX(0%);
     }
 }
