--- a/src/components/Navbar/css/styles.css
+++ b/src/components/Navbar/css/styles.css
@@ -14,6 +14,7 @@
   font-family: "Poppins";
   font-size: 20px;
   color: #fff;
+  text-decoration: none;
 }
 .container-menu_options .menu-button {
   position: relative;
