--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -1,20 +1,43 @@
 .container-bg {
     position: relative;
+    top: 0px;
+    left: 0%;
+    transform: translateX(0%);
+    width: 100%;
+    height: 100vh;
+    transition: width 1s ease-in-out 1s, height 1s ease-in-out 2s;
+    /* transition: left 1s ease-in-out, top 1s ease-in-out 1s; */
+    transition: 1s ease-in-out 1s;
+}
+.container-bg.off {
+    top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 60px;
 }
 
 .video-container {
     display: flex;
     justify-content: flex-start; align-items: center;
     width: 100%;
-    height: 100vh;
+    height: inherit;
     background-color: #000000;
+    transition: 1s ease-in-out 1s;
     overflow: hidden;
+}
+.container-bg.off .video-container {
+    border-radius: 30px;
 }
 
 video {
-    transform: translateX(-25%);
+    transform: translate(-25%, 0%);
     /* width: 100%; */
     height: 100vh;
+    transition: 1s;
+}
+.container-bg.off .video-container video {
+    transform: translate(-25%, 8%);
 }
 
 .container-title {
@@ -37,6 +60,6 @@ video {
         justify-content: center; align-items: center;
     }
     video {
-        transform: translateX(0%);
+        transform: translate(0%, 0%);
     }
 }
