--- a/src/components/ProjectsButton/css/styles.css
+++ b/src/components/ProjectsButton/css/styles.css
@@ -1,10 +1,16 @@
 .container-projects__button {
   display: block;
   margin-top: 25px;
+  color: #fff;
+  text-decoration: none;
+  transform: translateY(0%);
+  transition: 1s ease-in-out 2s;
 }
-.container-projects__button {
-    color: #fff;
-    text-decoration: none;
+.container-bg.off .container-projects__button {
+    transform: translateY(50%);
+    transition: 1s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
 }
 .container-projects__button span {
     font-size: 20px;
