Transition of home to projects ready but with a 2 issues or bugs(Firefox can't make the transitions and safari not recording the border radius)

--- a/src/components/ProjectsButton/css/styles.css
+++ b/src/components/ProjectsButton/css/styles.css
@@ -4,11 +4,11 @@
   color: #fff;
   text-decoration: none;
   transform: translateY(0%);
-  transition: 1s ease-in-out 2s;
+  transition: 1s ease-in-out 1.5s;
 }
 .container-bg.off .container-projects__button {
     transform: translateY(50%);
-    transition: 1s ease-in-out;
+    transition: .5s ease-in-out;
     visibility: hidden;
     opacity: 0;
 }
