--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -1,18 +1,15 @@
 .container-bg {
     position: relative;
     top: 0px;
-    left: 0%;
-    transform: translateX(0%);
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     height: 100vh;
-    transition: width 1s ease-in-out 1s, height 1s ease-in-out 2s;
+    transition: height 1s ease-in-out 1s, 1s ease-in-out;
     /* transition: left 1s ease-in-out, top 1s ease-in-out 1s; */
-    transition: 1s ease-in-out 1s;
 }
 .container-bg.off {
     top: 40px;
-    left: 50%;
-    transform: translateX(-50%);
     width: 90%;
     height: 60px;
 }
@@ -23,11 +20,12 @@
     width: 100%;
     height: inherit;
     background-color: #000000;
-    transition: 1s ease-in-out 1s;
+    transition: .5s ease-in-out;
     overflow: hidden;
 }
 .container-bg.off .video-container {
     border-radius: 30px;
+    -webkit-border-radius: 0px;
 }
 
 video {
