--- a/src/components/TitleHeader/css/styles.css
+++ b/src/components/TitleHeader/css/styles.css
@@ -1,12 +1,13 @@
 .container-text {
   width: 384px;
   transform: translateY(0%);
-  transition: 1s ease-in-out 2s;
+  transition: 1s ease-in-out 1.5s;
 }
 .container-bg.off .container-text {
   opacity: 0;
   transform: translateY(50%);
-  transition: 1s ease-in-out;
+  transition: .5s ease-in-out;
+  visibility: hidden;
 }
 
 .header-title {
