--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -1,17 +1,19 @@
 .container-bg {
-    position: relative;
+    position: fixed;
     top: 0px;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
     height: 100vh;
     transition: height 1s ease-in-out 1s, 1s ease-in-out;
+    z-index: 100;
     /* transition: left 1s ease-in-out, top 1s ease-in-out 1s; */
 }
 .container-bg.off {
     top: 40px;
     width: 90%;
     height: 60px;
+    box-shadow: 0 5px 15px #0004;
 }
 
 .video-container {
