template for the projects posts ready and fixed a css problem with the navbar options

--- a/src/components/Navbar/css/styles.css
+++ b/src/components/Navbar/css/styles.css
@@ -59,7 +59,7 @@
 }
 
 .container-menu_information {
-  position: absolute;
+  position: fixed;
   top: 0; left: 100%;
   display: flex;
   justify-content: center;
