--- a/src/Routes/Post/css/style.css
+++ b/src/Routes/Post/css/style.css
@@ -1,5 +1,35 @@
-.center {
+.container-project {
     position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%; left: 50%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 150px 0;
+}
+.container-imageHeader {
+    width: 90%;
+    /* height: 270px; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+}
+.container-imageHeader .imgBox {
+    display: flex;
+    justify-content: center;align-items: center;  
+    width: 100%;
+    /* height: 80%; */
+    /* overflow: hidden; */
+}
+.container-imageHeader .imgBox img {
+    width: 100%;
+}
+.container-imageHeader h1 {
+    margin-top: 20px;
+    font-size: 40px;
+    text-transform: uppercase;
+    font-family: 'Yaldevi', Verdana, Geneva, Tahoma, sans-serif;
+}
+.container-content :is(h1, h2, h3, h4){
+    font-family: 'Yaldevi', Verdana, Geneva, Tahoma, sans-serif;
 }
