--- a/src/Routes/Projects/css/style.css
+++ b/src/Routes/Projects/css/style.css
@@ -4,15 +4,16 @@
 .container-projects {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-  padding: 0 12%;
-  min-height: 100vh;
-  height: 100vh;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 0 30px;
   padding-top: 150px;
+  width: 100%;
+  height: 100vh;
   overflow-y: scroll;
 }
 
@@ -21,6 +22,7 @@
   width: 100%;
   max-width: 350px;
   height: 200px;
+  margin-right: 20px;
   margin-bottom: 50px;
   text-decoration: none;
 }
@@ -48,14 +50,14 @@
   text-transform: uppercase;
 }
 .imageContainer {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 70%;
-    overflow: hidden;
-    background-color: #fff;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70%;
+  overflow: hidden;
+  background-color: #fff;
 }
 /* .imageContainer:after {
     content: "";
