--- a/src/Routes/Post/css/style.css
+++ b/src/Routes/Post/css/style.css
@@ -6,6 +6,7 @@
 }
 .container-imageHeader {
     width: 90%;
+    max-width: 860px;
     padding-top: 150px;
     /* height: 270px; */
     display: flex;
@@ -18,8 +19,8 @@
     display: flex;
     justify-content: center;align-items: center;  
     width: 100%;
-    /* height: 80%; */
-    /* overflow: hidden; */
+    height: 500px;
+    overflow: hidden;
 }
 .container-imageHeader .imgBox img {
     width: 100%;
@@ -40,6 +41,7 @@
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
+    margin-bottom: 150px;
     padding: 20px;
     cursor: pointer;
 }
