--- a/src/components/TitleHeader/css/styles.css
+++ b/src/components/TitleHeader/css/styles.css
@@ -6,7 +6,7 @@
 .container-bg.off .container-text {
   opacity: 0;
   transform: translateY(50%);
-  transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
   visibility: hidden;
 }
 
@@ -15,15 +15,27 @@
   text-align: center;
   font-size: 34px;
 }
-
-.little-comma {
+.header-title .hidden-letter {
+  display: inline-block;
+  margin-bottom: -10px;
+  width: 100%;
+  height: 50%;
+  overflow: hidden;
+}
+.header-title .hidden-letter .letter-title {
+  white-space: pre;
+  transform-origin: 0 100%;
+  display: inline-block;
+  transform: translate(0.55em, 1.1em) rotateZ(180deg);
+}
+.header-title .hidden-letter .little-comma {
   font-size: 20px;
 }
 
 .border {
   display: block;
   height: 5px;
-  width: 100%;
+  width: 0%;
   margin-top: 2.5px;
   background-color: #fff;
 }
