--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -1,11 +1,11 @@
 .container-bg {
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
     height: 100vh;
-    transition: height 1s ease-in-out 1s, 1s ease-in-out;
+    transition:1s ease-in-out, height .5s ease-in-out 1s;
     z-index: 100;
 }
 .container-bg.off {
@@ -21,7 +21,7 @@
     width: 100%;
     height: inherit;
     background-color: #000000;
-    transition: .5s ease-in-out;
+    /* transition: .5s ease-in-out; */
     overflow: hidden;
 }
 .container-bg.off .video-container {
@@ -44,7 +44,7 @@ video {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     bottom: 0; left: 50%;
     transform: translateX(-50%);
     width: 100%;
