--- a/src/components/Navbar/css/styles.css
+++ b/src/components/Navbar/css/styles.css
@@ -16,47 +16,64 @@
   color: #fff;
   text-decoration: none;
 }
+/*  */
 .container-menu_options .menu-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  width: 37px;
-  height: 23px;
+  width: 65px;
+  height: 65px;
+  padding: 10px;
+  border-radius: 50%;
+  border: solid 1px #fff0;
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
 .container-menu_options .menu-button:hover {
-  height: 17px;
+  border: solid 1px #fff;
+ transform: scale(1.1);
 }
-.container-menu_options .menu-button .menuLine {
+.container-menu_options .menu-button .circle-border {
   position: absolute;
-  transform: translateY(-50%);
-  display: block;
-  width: 100%;
-  height: 3px;
-  background-color: #fff;
-  border-radius: 10px;
+  border: inherit;
+  border-radius: 50%;
   transition: .2s ease-in-out;
+  width: 45px;
+  height: 45px;
 }
-.container-menu_options .menu-button .menuLine.menuLine-1 {
-  top: 0%;
+.container-menu_options .menu-button .circle-border.border-1 {
+  width: inherit;
+  height: inherit;
+  transition: 1s ease-in-out;
 }
-.container-menu_options .menu-button.active .menuLine.menuLine-1 {
-  top: 50%;
-  transform: translateY(-50%) rotate(35deg);
+.container-menu_options .menu-button.active .circle-border.border-1 {
+  transform: scale(1.30);
 }
-.container-menu_options .menu-button .menuLine.menuLine-2 {
-  top: 50%;
+.container-menu_options .menu-button .container-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 18px;
+  transition: 1s ease-in-out;
+  overflow: hidden;
 }
-.container-menu_options .menu-button.active .menuLine.menuLine-2 {
-  top: 50%;
-  transform: translateY(-50%) rotate(140deg);
+.container-menu_options .menu-button .container-text .menu-title {
+  display: inline-block;
+  color: #fff;
+  font-size: 15px;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  transition: 1s ease-in-out;
 }
-.container-menu_options .menu-button .menuLine.menuLine-3 {
-  top: 100%;
+.container-menu_options .menu-button:hover .container-text .menu-title {
+  transform: translateY(20px);
 }
-.container-menu_options .menu-button.active .menuLine.menuLine-3 {
-  top: 50%;
-  transform: translateY(-50%) rotate(140deg);
+.container-menu_options .menu-button.active:hover .container-text .menu-title {
+  transform: translateY(-20px);
 }
+
 
 .container-menu_information {
   position: fixed;
