--- a/src/components/Navbar/css/styles.css
+++ b/src/components/Navbar/css/styles.css
@@ -32,13 +32,13 @@
 }
 .container-menu_options .menu-button:hover {
   border: solid 1px #fff;
- transform: scale(1.1);
+  transform: scale(1.1);
 }
 .container-menu_options .menu-button .circle-border {
   position: absolute;
   border: inherit;
   border-radius: 50%;
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
   width: 45px;
   height: 45px;
 }
@@ -48,7 +48,7 @@
   transition: 1s ease-in-out;
 }
 .container-menu_options .menu-button.active .circle-border.border-1 {
-  transform: scale(1.30);
+  transform: scale(1.3);
 }
 .container-menu_options .menu-button .container-text {
   display: flex;
@@ -70,61 +70,71 @@
 .container-menu_options .menu-button:hover .container-text .menu-title {
   transform: translateY(20px);
 }
-.container-menu_options .menu-button.active:hover .container-text .menu-title {
+.container-menu_options .menu-button.active .container-text .menu-title {
   transform: translateY(-20px);
 }
-
+.container-menu_options .menu-button.active:hover .container-text .menu-title {
+  transform: translateY(0px);
+}
 
 .container-menu_information {
   position: fixed;
-  top: 0; left: 100%;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
   padding: 5%;
+  transform: translateY(50%);
+  opacity: 0;
+  visibility: hidden;
   transition: .5s ease-in-out;
   z-index: 101;
 }
 .container-menu_information.active {
-  left: 0%;
+  transform: translateY(0%);
+  opacity: 1;
+  visibility: visible;
 }
 .container-menu_information .background-blur {
-    position: absolute;
-    top: 0; left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: inherit;
-    height: inherit;
-    overflow: hidden;
-    z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: inherit;
+  height: inherit;
+  overflow: hidden;
+  opacity: 0;
+  transition: .5s ease-in-out .5s;
+  z-index: -1;
 }
 .container-menu_information .background-blur .filter {
-    width: 150%;
-    height: 150%;
-    /* filter: blur(10px); */
-    background-color: #0005;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+  width: 150%;
+  height: 150%;
+  background-color: #0005;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+.container-menu_information.active .background-blur {
+  opacity: 1;
 }
 .container-menu_information .menu-links {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 90%;
 }
-.container-menu_information .menu-links span {
-    color: #fff0;
-    font-family: 'Noto Sans Display' Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 66px;
-    font-weight: bold;
-    text-transform: uppercase;
-    -webkit-text-stroke: 2px #fff;
-    cursor: pointer;
-    transition: .2s ease-in-out;
+.container-menu_information .menu-links a {
+  color: #fff;
+  transition: .5s ease-in-out;
 }
-.container-menu_information .menu-links span:hover {
-    color: #fff;
+.container-menu_information .menu-links a:hover {
+  color: #fff9;
+  transform: scale(1.1);
 }
