--- a/src/Routes/Post/css/style.css
+++ b/src/Routes/Post/css/style.css
@@ -38,7 +38,7 @@
 .nextProject {
   position: relative;
   /* height: 400px; */
-  width: 100%;
+  width: 90%;
   max-width: 500px;
   margin: 150px auto;
   cursor: pointer;
@@ -52,11 +52,10 @@
   align-items: center;
   z-index: -1;
 }
-.nextProject .imgBox div {
-  width: 100%;
+.nextProject .imgBox .image-container {
   transition: 1s ease-in-out;
 }
-.nextProject:hover .imgBox div {
+.nextProject:hover .imgBox .image-container {
   transform: scale(1.1);
 }
 
@@ -104,5 +103,5 @@
   transition: 1s ease-in-out;
 }
 .nextProject:hover .nextProject-next span {
-  transform: translateY(-17px);
+  transform: translateY(-20px);
 }
