--- a/src/Routes/Post/css/style.css
+++ b/src/Routes/Post/css/style.css
@@ -7,7 +7,7 @@
 .container-imageHeader {
   width: 90%;
   max-width: 860px;
-  padding-top: 150px;
+  padding-top: 85px;
   /* height: 270px; */
   display: flex;
   justify-content: space-between;
@@ -22,8 +22,8 @@
   width: 100%;
   overflow: hidden;
 }
-.container-imageHeader .imgBox img {
-  width: 100%;
+.container-imageHeader .imgBox .image-container {
+  margin: 0;
 }
 .container-imageHeader h1 {
   margin-top: 20px;
