--- a/src/Pages/css/styles.css
+++ b/src/Pages/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --maxWidth-text: 442px;
+  --maxWidth-text: 500px;
 }
 .container {
   width: 100%;
@@ -10,7 +10,7 @@
 .section-description {
   margin: 0 auto;
   margin-top: 20px;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
   width: 100%;
   max-width: 442px;
 }
@@ -46,6 +46,8 @@
 }
 .section-information .section-margin h2 {
   font-size: 35px;
+  margin-top: 30px;
+  margin-bottom: 0px;
 }
 .section-information .section-margin h3 {
   font-size: 25px;
@@ -60,7 +62,8 @@
   width: 90%;
   max-width: var(--maxWidth-text);
   text-align: justify;
-  margin: 20px auto;
+  margin: 0 auto;
+  margin-bottom: 10px;
   line-height: 25px;
   font-family: "Noto Sans Display", sans-serif;
   font-size: 18px;
@@ -88,9 +91,10 @@
   width: 90%;
   max-width: var(--maxWidth-text);
   padding-top: 15px;
-  padding-bottom: 30px;
-  padding-left: 40px;
+  padding-bottom: 15px;
+  padding-left: 30px;
   margin: 0 auto;
+  margin-bottom: 10px;
 }
 .highlighted-comment::after {
   content: "";
