--- a/src/Routes/Projects/css/style.css
+++ b/src/Routes/Projects/css/style.css
@@ -21,12 +21,10 @@
   display: inline-block;
   width: 100%;
   max-width: 350px;
-  height: 200px;
   margin-bottom: 50px;
   text-decoration: none;
 }
 .titleContainer {
-  height: 30%;
   color: #000;
 }
 .titleContainer .type-project {
@@ -64,7 +62,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 70%;
+  max-height: 196.88px;
   overflow: hidden;
   background-color: #fff;
 }
