casi todos los warning estan listos

--- a/src/Routes/NotFound/css/style.css
+++ b/src/Routes/NotFound/css/style.css
@@ -11,7 +11,7 @@
 .container-404 .card-404 {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     width: 99%;
     max-width: 500px;
@@ -53,8 +53,8 @@
 }
 .container-404 .card-404 h1 {
     display: flex;
-    justify-content: start;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
     font-size: 200px;
 }
