reStyle title and button

--- a/src/containers/ContainerSections/css/styles.css
+++ b/src/containers/ContainerSections/css/styles.css
@@ -1,9 +1,9 @@
 .container-sections {
-  display: flex;
+  /* display: flex;
   justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  max-width: 364px;
+  align-items: center; */
+  /* width: 100%;
+  max-width: 364px; */
 }
 @media (max-width: 400px) {
   .container-sections {
