--- a/src/components/ProjectsButton/css/styles.css
+++ b/src/components/ProjectsButton/css/styles.css
@@ -1,42 +1,56 @@
 .container-projects__button {
   display: block;
-  padding: 10px 25px;
-  margin-top: 25px;
   color: #fff;
-  background-color: #fff0;
+  padding:6px 3px;
   text-decoration: none;
   transform: translateY(0%);
-  transition: 1s ease-in-out 1.5s, background 0.5s ease-in-out 0s,
-    color 0.5s ease-in-out 0.2s;
+  transition: 1s ease-in-out 1.5s, 
+  /* background 0.5s ease-in-out 0s,
+    color 0.5s ease-in-out 0.2s */
+    ;
 }
-.container-projects__button:hover {
-  background-color: #fff;
-  color: #000;
-}
+
 .container-bg.off .container-projects__button {
   transform: translateY(50%);
   transition: 0.5s ease-in-out;
   visibility: hidden;
   opacity: 0;
 }
-.container-projects__button span {
-  font-size: 20px;
+.container-projects__button .word_container {
+  position: relative;
+  font-size: 17px;
   text-transform: uppercase;
 }
-.container-projects__button .border {
-  width: 100%;
-  height: 1px;
-  background-color: #fff;
-  transition: background 0.5s ease-in-out 0s;
+.container-projects__button .word_container .word-bx {
+  overflow: hidden;
 }
-.container-projects__button:hover .border {
-  background-color: #000;
+.container-projects__button .word_container .word__container-second-word {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.container-projects__button .word_container .word__container-second-word span {
+  display: inline-block;
+  transform: translateY(-100%);
 }
 
+.container-projects__button .border {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  height: 1px;
+  background-color: #fff;
+  transition: 0.5s ease-in-out 0s;
+}
+.container-projects__button:hover .border {
+  width: 90%;
+}
 @media (min-width: 1024px) {
   .container-projects__button {
     display: block;
     margin-top: 22px;
     margin-right: 20px;
   }
-}
+} 
