--- a/src/components/TitleHeader/css/styles.css
+++ b/src/components/TitleHeader/css/styles.css
@@ -1,5 +1,4 @@
 .container-text {
-  width: 384px;
   transform: translateY(0%);
   transition: 1s ease-in-out 1.5s;
 }
@@ -11,14 +10,14 @@
 }
 
 .header-title {
-  width: 100%;
+  display: inline-block;
+  /* width: 100%; */
   text-align: center;
   font-size: 34px;
 }
 .header-title .hidden-letter {
   display: inline-block;
   margin-bottom: -10px;
-  width: 100%;
   height: 50%;
   overflow: hidden;
 }
@@ -28,39 +27,27 @@
   display: inline-block;
   transform: translate(0.55em, 1.1em) rotateZ(180deg);
 }
-.header-title .hidden-letter .little-comma {
-  font-size: 20px;
-}
-
-.border {
-  display: block;
-  height: 5px;
-  width: 0%;
-  margin-top: 2.5px;
-  background-color: #fff;
-}
-
 @media (max-width: 400px) {
-  .container-text {
+  /* .container-text {
     width: 354px;
   }
   .header-title {
     font-size: 30px;
-  }
+  } */
 }
 @media (min-width: 1024px) {
-  .container-text {
+  /* .container-text {
     width: 600px;
   }
   .header-title {
     font-size: 54px;
-  }
+  } */
 }
 @media (min-width: 1440px) {
-  .container-text {
+  /* .container-text {
     width: 800px;
   }
   .header-title {
     font-size: 74px;
-  }
+  } */
 }
