--- a/src/Routes/Projects/css/style.css
+++ b/src/Routes/Projects/css/style.css
@@ -73,3 +73,9 @@
 .container-post:hover .imageContainer img {
   transform: scale(1.1);
 }
+
+@media (min-width: 500px) {
+  .container-projects {
+    padding-top: 235px;
+  }
+}
