--- a/src/components/Background-header/css/styles.css
+++ b/src/components/Background-header/css/styles.css
@@ -9,41 +9,67 @@
   z-index: 100;
 }
 .container-bg.off {
-  top: 40px;
-  width: 90%;
-  height: 65px;
+  top: 29px;
+  width: 328px;
+  height: 80px;
   box-shadow: 0 5px 15px #0004;
+  transition: 1s ease-in-out, width 1s ease-in-out 1s;
 }
 
+.container-bg :is(.video-container, .image-background) {
+  overflow: hidden;
+  width: 100%;
+  height: inherit;
+  background-color: #000000;
+}
 .container-bg .video-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
-  height: inherit;
-  background-color: #000000;
-  transition: 0s ease-in-out;
-  overflow: hidden;
 }
-.container-bg.off .video-container {
+.container-bg .image-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url('https://i.ibb.co/yX940pn/hu-Tao-mobil-2.png');
+  background-position-x: 19%;
+  transition: 1s ease-in-out;
+  z-index: -1;
+}
+.container-bg.off :is(.video-container, .image-background) {
   border-radius: 30px;
   -webkit-border-radius: 0px;
 }
 
-video {
+.container-bg .video-container video {
   transform: translate(-25%, 0%);
-  /* width: 100%; */
   height: 100vh;
   transition: 1s;
 }
 .container-bg.off .video-container video {
   transform: translate(-25%, 8%);
 }
-
+.container-bg.off .image-background {
+  background-size: 1280px;
+  background-position-y: 11.5%;
+}
+.container-bg .image-background .image-shadow  {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: inherit;
+  height: 50%;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+  transition: 1s 2s;
+}
+.container-bg.off .image-background .image-shadow {
+  opacity: 0;
+  transition: 1s .5s;
+}
 .container-title {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-direction: row-reverse;
   position: fixed;
   bottom: 0;
@@ -58,9 +84,21 @@ video {
   padding-bottom: 35px;
 }
 
-@media (min-width: 620px) {
+@media (min-width: 500px) {
+  .container-title {
+    max-width: 400px;
+  }
+  .container-bg .image-background .image-shadow  {
+    height: 33%;
+  }
   .container-bg.off {
-    width: 600px;
+    top: 55px;
+    height: 100px;
+  }
+}
+@media (min-width: 620px) {
+  .container-title {
+    max-width: 600px;
   }
   .container-bg .video-container {
     justify-content: center;
@@ -72,8 +110,11 @@ video {
   .container-bg.off .video-container video {
     transform: translate(0%, 8%);
   }
+  .container-bg .image-background {
+    background-size: 2040px;
+    background-position:15% .5%;
+  }
 }
-
 @media (min-width: 1440px) {
   .container-title {
     justify-content: center;
